Add empty link to refrence page

--- a/home.html
+++ b/home.html
@@ -19,6 +19,7 @@
         <button>χ<sup>2</sup></button>
         <button>t</button>
     </div>
+    <a href="google.com" class = "biolink">Which Should I Use?</a>
     <script src="script.js"></script>
 </body>
 </html>
