Fix chi square button

--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
         <button>Poisson</button>
         <button>Exponential</button>
         <button>Gamma</button>
-        <button>χ<sup>2</sup></button>
+        <button>Chi Squared</button>
         <button>t</button>
     </div>
     <a href="google.com" class = "biolink">Which Should I Use?</a>
