add redirect to normal distribution

--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <div class = heading><h1>Statistics Calculator</h1></div>
     <h2 style="text-align:center;">Pick a distribution to calculate:</h2>
     <div class="buttonGrid">
-        <button>Normal</button>
+        <button onclick="goToNormal()">Normal</button>
         <button>Binomial</button>
         <button>Negative Binomial</button>
         <button>Poisson</button>
