Add functionality to Home page buttons

--- a/home.html
+++ b/home.html
@@ -11,13 +11,13 @@
     <h2 style="text-align:center;">Pick a distribution to calculate:</h2>
     <div class="buttonGrid">
         <button onclick="goToNormal()">Normal</button>
-        <button>Binomial</button>
-        <button>Negative Binomial</button>
-        <button>Poisson</button>
-        <button>Exponential</button>
-        <button>Gamma</button>
-        <button>Chi Squared</button>
-        <button>t</button>
+        <button onclick="goToBinomial()">Binomial</button>
+        <button onclick="goToNB()">Negative Binomial</button>
+        <button onclick="goToPoisson()">Poisson</button>
+        <button onclick="goToExponential()">Exponential</button>
+        <button onclick="goToGamma()">Gamma</button>
+        <button onclick="goToChi()">Chi Squared</button>
+        <button onclick="goToT()">t</button>
     </div>
     <a href="google.com" class = "biolink">Which Should I Use?</a>
     <script src="script.js"></script>
