--- a/binomial.html
+++ b/binomial.html
@@ -9,20 +9,21 @@
 <body>
     <div class = heading><h1>Statistics Calculator</h1></div>
     <h2 style="text-align:center;">Binomial:</h2>
+    <div class = calculator>
     <form id="biForm">
-        <label>x:</label>
+        <label for="x">x:</label>
         <input type="number" id="x" step="1" placeholder='Number of "Wins"' required>
 
-        <label">p:</label>
+        <label for="p">p:</label>
         <input type="number" id="p" step="0.01" placeholder="Probablity of Success" required>
     
-        <label>n:</label>
+        <label for="n">n:</label>
         <input type="number" id="n" step="1" placeholder="Number of Trials" required>
 
         <button onclick="binomial()">Calculate</button>
+        <p id="result"></p>
     </form>
-
-    <p id="result"></p>
+    </div>
     
     <script src="script.js"></script>
 </body>
