--- a/binomial.html
+++ b/binomial.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class = heading><h1>Statistics Calculator</h1></div>
+    <div class = heading onclick="goToHome()"><h1>Statistics Calculator</h1></div>
     <h2 style="text-align:center;">Binomial:</h2>
     <div class = calculator>
     <form id="biForm">
