--- a/binomial.html
+++ b/binomial.html
@@ -10,7 +10,7 @@
     <div class = heading onclick="goToHome()"><h1>Statistics Calculator</h1></div>
     <h2 style="text-align:center;">Binomial:</h2>
     <div class = calculator>
-    <form>
+    <form id="binomialForm">
         <label for="x">x:</label>
         <input type="number" id="x" step="1" placeholder='Number of "Wins"' required>
 
